@@ -1,3 +1,7 @@
+2009-05-04  Eitan Isaacson  <eitan@ascender.com>
+
+	* pyreqs.py: Removed more bonobo references (bug #580421).
+
 2008-06-05  Eitan Isaacson  <eitan@ascender.com>
 
 	* macaroon/playback/keypress_actions.py (TypeAction._charType): 
